--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -1,7 +1,14 @@
 <style>
 	.header-ms-explorer {position: fixed; width: 100%;}
 </style>
-
+<div ng-show="project_lightbox" style="position: fixed; top: 100px; left: 0; bottom: 0; right: 0; background: rgba(0,0,0,.75); z-index: 21;" layout="row" layout-align="center center" layout-wrap>
+	<md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="close_lightweight_box()" ng-attr-style="position: absolute; top: 24px; right: 16px; background-color: {{primary_hue_normal.value}}!important;">
+            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
+    </md-button>
+	<div flex="100" style="position: relative; height: 600px;">
+		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-height: {{window_height}}px!important; min-height: 400px; min-width: 600px; height: auto;">
+	</div>
+</div>
 <md-content class="page project" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lighter.value}}">
 
@@ -17,15 +24,6 @@
 		<md-button ng-if="me.security.roles == 'Lightweight Internet Coordinator' || me.security.roles == 'Lightweight Support'" ng-click="edit(projectPage.settings.configs, projectPage)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: fixed; bottom: 128px; right: 24px;">
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
-
-	    <div ng-show="project_lightbox" style="position: absolute; top: 0; left: 0; background: rgba(0,0,0,.75); z-index: 20; width: 100%; height: 100%;" layout="row" layout-align="center center" layout-wrap>
-			<md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="close_lightweight_box()" ng-attr-style="position: absolute; top: 36px; right: 64px; background-color: {{primary_hue_normal.value}}!important;">
-		            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
-		    </md-button>
-			<div flex="100" style="position: relative; height: 600px;">
-				<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-height: {{window_height}}px!important; min-height: 400px; min-width: 600px; height: auto;">
-			</div>
-		</div>
 
 	    <div class="interior-page" flex="100" layout="row" layout-align="center start" layout-wrap style="width: 100%;">
 			
