--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -1,12 +1,12 @@
 <style>
 	.header-ms-explorer {position: fixed; width: 100%;}
 </style>
-<div ng-show="project_lightbox" style="position: fixed; top: 100px; left: 0; bottom: 0; right: 0; background: rgba(0,0,0,.75); z-index: 21;" layout="row" layout-align="center center" layout-wrap>
+<div ng-show="project_lightbox" style="position: fixed; top: 0; left: 0; bottom: 0; right: 0; background: rgba(0,0,0,.75); z-index: 20;" layout="row" layout-align="center center" layout-wrap>
 	<md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="close_lightweight_box()" ng-attr-style="position: absolute; top: 24px; right: 16px; background-color: {{primary_hue_normal.value}}!important;">
             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
     </md-button>
 	<div flex="100" style="position: relative; height: 600px;">
-		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-height: {{window_height}}px!important; min-height: 400px; min-width: 600px; height: auto;">
+		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-width: {{window_width - 100}}px!important; min-height: 600px; min-width: 600px; height: auto;">
 	</div>
 </div>
 <md-content class="page project" style="height: {{window_height}}px">
