--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -19,7 +19,7 @@
 	<div flex="100" style="position: relative; height: 700px;">
 		<slick ng-if="secondary_slideshow_hero.images.length" responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true centerMode=true slides-to-show=2 touch-move=true slides-to-scroll=1 autoplaySpeed=6000>
 		 <div ng-repeat="slide in secondary_slideshow_hero.images">
-		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; max-width: 100%; width: auto!important; max-height: 700px!important; height: auto;">
+		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; max-width: 100%; width: auto!important; min-height: 700px!important; height: auto;">
 		 </div>
 		</slick>
 	</div>
