--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -6,7 +6,7 @@
             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
     </md-button>
 	<div flex="100" style="position: relative; height: 700px;">
-		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-height: {{window_height - 100}}px!important; max-height: 700px; min-width: 600px; height: auto;">
+		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-height: 700px; min-width: 600px; height: auto;">
 	</div>
 </div>
 <md-content class="page project" style="height: {{window_height}}px">
