--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -17,9 +17,9 @@
 </style>
 <div layout="row" layout-align="center center" layout-wrap ng-attr-style="background-color: {{base_hue_darkest.value}};">
 	<div flex="100" style="position: relative; height: 700px;">
-		<slick ng-if="secondary_slideshow_hero.images.length" responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true slides-to-show=2 touch-move=true slides-to-scroll=1 autoplaySpeed=6000>
-		 <div ng-repeat="slide in secondary_slideshow_hero.images">
-		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; width: auto!important; min-height: 700px!important; height: auto;">
+		<slick ng-if="featured_projects" responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true slides-to-show=2 touch-move=true slides-to-scroll=1 autoplaySpeed=6000>
+		 <div ng-repeat="slide in featured_projects">
+		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.data.page.foreground.images.source}}" style="display: block; margin: 0 auto; width: auto!important; min-height: 700px!important; height: auto;">
 		 </div>
 		</slick>
 	</div>
