--- a/lib/client/app/stylesheets/app.css
+++ b/lib/client/app/stylesheets/app.css
@@ -13,12 +13,10 @@ md-list md-list-item .md-avatar-icon {
 	overflow: hidden;
 }
 .projects-listing img {
-	min-height: 100%;
-	min-width: 100%;
+	max-height: 100%;
+	max-width: 100%;
 	height: auto;
 	width: auto;
-	margin-left: -25%;
-	margin-top: -50%;
 }
 .projects-listing .post-image {
 	max-height: 300px;
