--- a/lib/client/app/stylesheets/app.css
+++ b/lib/client/app/stylesheets/app.css
@@ -15,6 +15,7 @@ md-list md-list-item .md-avatar-icon {
 .projects-listing img {
 	max-height: 100%;
 	max-width: 100%;
+	min-height: 300px;
 	height: auto;
 	width: auto;
 }
