--- a/lib/client/app/application/pages/projects/partials/project-list-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-list-template.html
@@ -33,14 +33,14 @@
 	        			<md-icon style="color: {{base_hue_lighter.value}};">subdirectory_arrow_right</md-icon>
     				</md-button>
 					</a>
-					<div flex="100" flex-sm="50" flex-gt-sm="50" style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
+					<div flex="100" flex-sm="50" flex-gt-sm="50" layout-padding style="background-color: {{base_hue_lightest.value}}; opacity: .9; z-index: 2; margin: 0; padding: 0; min-width: 50%; min-height: 250px">
 						<md-card-header>
 							<md-card-header-text>
 								<h1 class="type heading" style="font-weight: bold; color: {{primary_hue_normal.value}};">{{item.data.title}}</h1>
 							</md-card-header-text>
 						</md-card-header>
 						<md-card-content>
-							<p md-truncate style="color: {{base_hue_darker.value}}; max-height: 100px;">{{item.data.description}};</p>
+							<p style="color: {{base_hue_darker.value}}; max-height: 100px;">{{item.data.description}};</p>
 						</md-card-content>
 					</div>
 				</md-card>
