--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -17,15 +17,6 @@
     }
     .navigation.widget md-input-container {margin: 8px 0!important;}
     .navigation.widget md-input-container.md-default-theme .md-input, .navigation.widget md-input-container .md-input {color: {{base_hue_lightest.value}}!important;}
-    .navigation.widget.staff img {
-        transition: transform .5s ease-in-out;
-    }
-    .navigation.widget.staff img.active {
-        transform: scale(0.9);
-    }
-    /*.dropdown md-input-container.md-default-theme .md-input, .dropdown md-input-container .md-input {
-        border-color: {{base_hue_lightest.value}}!important;
-    }*/
 </style>
 
 <md-card ng-show="sub_navigation_panel" flex="100" layout="row" layout-align="center start" layout-align-gt-sm="center start" layout-wrap class="sub-navigation dropdown md-whiteframe-8dp" ng-attr-style="overflow: hidden; overflow-y: auto; position: fixed; background: {{base_hue_darkest.value}}; width: {{scroll_bar_aware_window_width}}px; margin: 0;" ng-class="{'section-3-ms-explorer': browser == 'ie', 'open': sub_navigation_panel, 'close': !sub_navigation_panel}">
@@ -48,7 +39,6 @@
             </md-list-item>
             <a ng-href="{{child.url}}" ng-repeat="child in child_items" class="child navigation link mobile" style="cursor: pointer;">
                 <md-list-item ng-click="close_menu(); close_parent_menu()" class="navigation item" flex="100" layout-padding>
-                    <!-- <md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Internal Link {{child.name}}" md-font-library="material-icons">link</md-icon> -->
                     <p ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer; font-weight: lighter;">{{child.name}}</p>
                 </md-list-item>
                 <md-divider ng-if="!$last"></md-divider>
@@ -57,9 +47,9 @@
     </div>
 
 
-    <div flex="100" flex-gt-sm="40" layout="row" layout-align="center start" ng-class="{'null': menu_title == 'Projects', 'null': menu_title == 'People', 'null': menu_title == 'Services'}">
+    <div flex="100" flex-gt-sm="40" layout="row" layout-align="center start" ng-class="{'null': menu_title == 'Galleries', 'null': menu_title == 'Projects', 'null': menu_title == 'People', 'null': menu_title == 'Services'}">
     	
-    	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'Projects'">
+    	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'Projects' && featured_projects.length > 0">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="200px" md-row-height-gt-sm="250px" md-row-height="175px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in featured_projects | limitTo: 12" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
@@ -67,19 +57,6 @@
                             <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:100%; min-height: 100%;">
                             <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.data.title}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.data.title}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                         </a>
-                    </md-grid-tile>
-                </md-grid-list>
-            </div>
-        </div>
-
-        <div class="container navigation widget staff" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'People'">
-            <div flex="100" layout-margin>
-                <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="125px" md-row-height-gt-sm="90px" md-row-height="200px" md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 2" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-
-                            <img ng-src="{{tile.source}}" ng-class="{'active': hovered}" style="width: auto; max-width:300%; min-height: 100%; margin-top: 304px; filter: grayscale(100%);">
-                            <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
-
                     </md-grid-tile>
                 </md-grid-list>
             </div>
@@ -135,8 +112,79 @@
                 </form>
             </div>
         </div>
-        <div class="navigation map-widget widget" ng-show="menu_title == 'About Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
 
+        <div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-show="menu_title == 'Galleries'">
+            <div flex="100" layout-margin>
+                <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
+                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in featured_galleries | limitTo: 6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
+                        <a href="{{tile.url}}">
+                            <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%;">
+                            <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                        </a>
+                    </md-grid-tile>
+                </md-grid-list>
+            </div>
+        </div>
+
+        <div ng-show="menu_title == 'Contact Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget" style="min-width: 100%;">
+            <md-tabs md-dynamic-height md-border-bottom style="min-width: 100%; margin-top: 32px; margin-bottom: 32px;">
+                <md-tab label="Contact Info">
+                    <md-content class="md-padding" style="background-color: transparent!important;">
+                        <md-list-item class="md-2-line">
+                            <md-icon ng-attr-style="color: {{base_hue_lightest.value}}">phone</md-icon>
+                            <div class="md-list-item-text">
+                                <h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.phone_1}}</h3>
+                                <p ng-attr-style="color: {{base_hue_lightest.value}}">Office</p>
+                            </div>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <a class="addr_widget" ng-href="{{settings.data.address.google_address_link}}" target="_blank">
+                            <md-list-item class="md-2-line">
+                                <md-icon ng-attr-style="color: {{base_hue_lightest.value}}">location_on</md-icon>
+                                <div class="md-list-item-text">
+                                    <h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.address.street}} </h3>
+                                    <h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.address.city}}, {{ settings.data.address.state}} {{settings.data.address.zipcode}}</h3>
+                                    
+                                </div>
+                            </md-list-item>
+                    </md-content>
+                </md-tab>
+                <md-tab label="Hours" ng-show="settings.data.hours.enabled">
+                    <md-content class="md-padding" style="background-color: transparent!important;">
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Sunday <p class="md-secondary">{{settings.data.hours.sunday.start == 'Closed' ? 'Closed' : settings.data.hours.sunday.start + ' - '}}{{settings.data.hours.sunday.end == 'Closed' ? '' : settings.data.hours.sunday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Monday <p class="md-secondary">{{settings.data.hours.monday.start == 'Closed' ? 'Closed' : settings.data.hours.monday.start + ' - '}}{{settings.data.hours.monday.end == 'Closed' ? '' : settings.data.hours.monday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Tuesday <p class="md-secondary">{{settings.data.hours.tuesday.start == 'Closed' ? 'Closed' : settings.data.hours.tuesday.start + ' - '}}{{settings.data.hours.tuesday.end == 'Closed' ? '' : settings.data.hours.tuesday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Wednesday <p class="md-secondary">{{settings.data.hours.wednesday.start == 'Closed' ? 'Closed' : settings.data.hours.wednesday.start + ' - '}}{{settings.data.hours.wednesday.end == 'Closed' ? '' : settings.data.hours.wednesday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Thursday <p class="md-secondary">{{settings.data.hours.thursday.start == 'Closed' ? 'Closed' : settings.data.hours.thursday.start + ' - '}}{{settings.data.hours.thursday.end == 'Closed' ? '' : settings.data.hours.thursday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Friday <p class="md-secondary">{{settings.data.hours.friday.start == 'Closed' ? 'Closed' : settings.data.hours.friday.start + ' - '}}{{settings.data.hours.friday.end == 'Closed' ? '' : settings.data.hours.friday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
+                        Saturday <p class="md-secondary">{{settings.data.hours.saturday.start == 'Closed' ? 'Closed' : settings.data.hours.saturday.start + ' - '}}{{settings.data.hours.saturday.end == 'Closed' ? '' : settings.data.hours.saturday.end}}</p>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                    </md-content>
+                </md-tab>
+            </md-tabs>
+        </div>
+
+        <div class="navigation map-widget widget" ng-show="menu_title == 'About Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
             <!-- Map Widget -->
             <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; margin: 16px 0 40px 0;">
                 <div style="margin: 0; width: 100%" layout-wrap layout="row" layout-align="start center" flex>
@@ -151,9 +199,6 @@
                 
             </div>
             <!-- Map Widget -->
-
         </div>
-
     </div>
-
 </md-card>
